--- a/gvardiya/assets/css/main.scss
+++ b/gvardiya/assets/css/main.scss
@@ -670,7 +670,7 @@ background: -webkit-linear-gradient(135deg, rgba(255,255,255,1) 0%, rgba(233,161
 background: -o-linear-gradient(135deg, rgba(255,255,255,1) 0%, rgba(233,161,59,1) 50%, rgba(255,255,255,1) 100%); /* opera 11.10+ */
 background: -ms-linear-gradient(135deg, rgba(255,255,255,1) 0%, rgba(233,161,59,1) 50%, rgba(255,255,255,1) 100%); /* ie10+ */
 background: linear-gradient(315deg, rgba(255,255,255,1) 0%, rgba(233,161,59,1) 50%, rgba(255,255,255,1) 100%); /* w3c */
-border:15px solid black;
+border:15px solid #1C1A1F;
 border-radius: 15px;
 }
 .block06a-modal-body {
