--- a/gvardiya/assets/css/main.scss
+++ b/gvardiya/assets/css/main.scss
@@ -247,7 +247,7 @@ body {
   width: 25%;
   float: left;
   height: 100%;
-  cursor: pointer;
+  // cursor: pointer;
   overflow: hidden;
   position: relative;
   padding: 100px 30px 0 30px;
@@ -258,6 +258,9 @@ body {
 .block-03 .service li .in {
   width: 100%;
   height: 100%;
+}
+.block-03 .service li a {
+color:#ffffff;
 }
 .block-03 .service li .out {
   top: 0;
@@ -1581,4 +1584,51 @@ ul {
 	width: 20px;
 	top: 11px;
 	transform: rotate(45deg);
+}
+/*Style for flat_guard.html*/
+.block-03a {
+  color: #2f313c;
+  height: 950px;
+  background: url("../img/block-03a_bg.jpg") top center no-repeat;
+  background-size: cover;
+}
+.block-03a .page-center {
+  height: 550px;
+  margin-top: -250px;
+}
+.block-03a .top-contact .phone {
+  color: #2f313c;
+}
+.block-03a h1,h2 {
+  text-align: center;
+  margin-bottom: 40px;
+}
+.block-03a .schema li {
+  float: left;
+  width: 192px;
+  text-align: center;
+  padding-bottom: 10px;
+  font-family: 'exo_2.0extra_light';
+  background: url("../img//block-03a_item-list.png") 50% 15px no-repeat;
+}
+.block-03a .schema li .step {
+  font-size: 40px;
+  line-height: 40px;
+  margin-bottom: 30px;
+}
+.block-03a .left-box {
+  width: 40%;
+  float: left;
+  font-family: 'exo_2.0extra_light';
+}
+.block-03a .right-box {
+  width: 40%;
+  float: right;
+  text-align: right;
+}
+.page-center {
+  top: 50%;
+  left: 0;
+  width: 100%;
+  position: absolute;
 }
