--- a/gvardiya/assets/css/main.scss
+++ b/gvardiya/assets/css/main.scss
@@ -1632,3 +1632,129 @@ ul {
   width: 100%;
   position: absolute;
 }
+
+/*///////////////////////////////////*/
+#payfor {
+  width: 85%;
+	max-width: 835px;
+    padding:10px 20px 10px 20px;
+    background: white;
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+		transform: translate(-50%, -50%);
+
+}
+#payfor .form-header {
+  text-align: center;
+  font: 22px/30px 'exo_2.0semi_bold';
+  text-transform: uppercase;
+  margin-bottom: 10px;
+}
+ #payfor #li-2-3 {
+  display: none;
+ }
+
+
+
+//  .shown{
+// 	position: absolute;
+// 	display:block;
+// 	width: 100%;
+// 	height: 100vh;
+// 	left: 0;
+// 	top: 0;
+// 	background-color: rgba(0, 0, 0, 0.75);
+// 	z-index: 10;
+// }
+ .popup-wrapper-payfor {
+	position: absolute;
+	display:none;
+	width: 100%;
+	height: 100vh;
+	left: 0;
+	top: 0;
+	background-color: rgba(0, 0, 0, 0.75);
+	z-index: 10;
+	min-height: 100%;
+	font-size: 14px;
+	color: #000000;
+
+}
+.shownpay{
+	position: absolute;
+	display:block;
+	width: 100%;
+	height: 100vh;
+	left: 0;
+	top: 0;
+	background-color: rgba(0, 0, 0, 0.75);
+	z-index: 10;
+}
+.payfor{
+	table {
+		border-collapse: collapse;
+	}
+	table th {
+		background: #ccc;
+		color: #000;
+	}
+	table th, table td {
+		padding: 5px;
+		border: 1px solid;
+	}
+	.content {
+		padding: 10px 5px 0;
+		overflow: hidden;
+	}
+	.link:hover {
+		background-color: rgba(1, 141, 202, 0.3607843137254902);
+		transition: 500ms;
+	}
+	.departments {
+		text-align: center;
+		float: left;
+		padding-bottom: 10px;
+	}
+	.note{
+		margin: 20px 0 20px;
+	}
+	.notes
+	 { text-align: center;color: #6c2124; }
+
+}
+.qrcode{
+	text-align: center;
+	line-height: 190px;
+}
+
+.departments_print{
+	float: left;
+	padding-bottom: 10px;
+}
+.departments_load{
+	font-size: 17px;
+	padding-top: 5px;
+	float: left;
+
+}
+.departments_load:hover,.departments_print:hover{
+	color:#000000;
+	text-decoration: none;
+	font-weight: 600;
+}
+#close_payfor{
+	cursor: pointer;
+	float: right;
+	transition: all 0.8s ease-in-out;
+	img{
+		width: 30px;
+		height: 30px;
+	}
+
+}
+#close_payfor:hover{
+	transform: rotate(360deg);
+
+}
