--- a/gvardiya/assets/css/main.scss
+++ b/gvardiya/assets/css/main.scss
@@ -1761,12 +1761,32 @@ ul {
 	transform: rotate(360deg);
 
 }
+.logo-text-inner{
+	display: flex;
+	flex-direction: column;
+	align-items: center ;
+	width: 560px;
+	margin-top: 22px;
+	margin-left: 80px;
+}
+.block-01 .first-inner{
+font-size:20px;
+text-transform: uppercase;
+}
+.block-01 .second-inner{
+font-size:38px;
+text-transform: uppercase;
+
+
+}
 #block-01f{
   background: url("../img/block01f_bg.jpg") top center no-repeat;
   background-size: cover;
 }
 #block-01f h1{
-	top: 220px;
+	top: 225px;
+	display: flex;
+	justify-content: space-evenly;
 }
 #block-01h{
   background: url("../img/block01h_bg.jpg") top center no-repeat;
@@ -1774,6 +1794,8 @@ ul {
 }
 #block-01h h1{
 	top: 220px;
+	display: flex;
+	justify-content: space-evenly;
 }
 #block-01p{
   background: url("../img/block01p_bg.jpg") top center no-repeat;
@@ -1781,6 +1803,8 @@ ul {
 }
 #block-01p h1{
 	top: 220px;
+	display: flex;
+	justify-content: space-evenly;
 }
 #block-01с{
   background: url("../img/block01c_bg.jpg") top center no-repeat;
@@ -1788,13 +1812,15 @@ ul {
 }
 #block-01с h1{
 	top: 220px;
+	display: flex;
+	justify-content: space-evenly;
 }
 .block-01 .inner-content p:last-of-type{
 	padding-bottom: 40px;
 }
 .inner-top-block{
 	position: absolute;
-	top: 140px;
+	top: 117px;
 	.container{
 		border-top:1px solid #ffffff;
 		border-bottom:1px solid #ffffff;
@@ -1802,15 +1828,16 @@ ul {
 
 }
 .block-01 .inner-logo{
-top: 22px;
+top: 7px;
 left: 0px;
 margin-left: 0;
 width: 75px;
 height: 110px;
 }
 .inner-block-contact{
-margin-top: 10px;
+margin-top: -60px;
 float: right;
+
 }
 .block-01 .inner-top-contact{
 	float: initial;
@@ -1824,7 +1851,7 @@ float: right;
 
 .block-01 .inner-content{
 position: absolute;
-top: 42%;
+top: 37%;
 a{
 	text-transform: uppercase;
 }
@@ -1834,18 +1861,24 @@ p{
 }
 
 }
-
-.footer-inner{
-	position: absolute;
-	bottom: 5%;
+.prefooter-inner{
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
 	width: 100%;
+	align-items: center;
+}
+.footer-inner{
+	position: absolute;
+	bottom: 3%;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	width: 100%;
+	line-height: 4;
+	border-top: 1px solid;
+}
 
-}
-.footer-nav{
-}
 .topnav li{
 	margin: 0 5px;
   display: inline-block;
@@ -1855,8 +1888,6 @@ p{
     color: #e9a13b;
     font-family: 'exo_2.0semi_bold';
 	}
-}
-.copyright{
 }
 .copyright a{
 	color:#ffffff;
