--- a/gvardiya/assets/css/main.scss
+++ b/gvardiya/assets/css/main.scss
@@ -1775,11 +1775,30 @@ text-transform: uppercase;
 
 
 }
+
 #block-01f{
   background: url("../img/block01f_bg.jpg") top center no-repeat;
   background-size: cover;
 }
 #block-01f h2{
+	position: initial;
+	font-size: 19px;
+	line-height: 1.3;
+	text-align: start;
+}
+#block-01h h2{
+	position: initial;
+	font-size: 19px;
+	line-height: 1.3;
+	text-align: start;
+}
+#block-01p h2{
+	position: initial;
+	font-size: 19px;
+	line-height: 1.3;
+	text-align: start;
+}
+#block-01с h2{
 	position: initial;
 	font-size: 19px;
 	line-height: 1.3;
@@ -1800,32 +1819,62 @@ text-transform: uppercase;
 		margin-right: 20px;
 	}
 }
+#block-01h .inner-block-title{
+	left: 0;
+  width: 100%;
+  position: absolute;
+	top: 180px;
+	h1{
+		width: initial;
+		position: initial;
+		text-align: start;
+	}
+	a{
+		font-size: 14px;
+		margin-right: 20px;
+	}
+}
+#block-01p .inner-block-title{
+	left: 0;
+  width: 100%;
+  position: absolute;
+	top: 180px;
+	h1{
+		width: initial;
+		position: initial;
+		text-align: start;
+	}
+	a{
+		font-size: 14px;
+		margin-right: 20px;
+	}
+}
+#block-01с .inner-block-title{
+	left: 0;
+  width: 100%;
+  position: absolute;
+	top: 180px;
+	h1{
+		width: initial;
+		position: initial;
+		text-align: start;
+	}
+	a{
+		font-size: 14px;
+		margin-right: 20px;
+	}
+}
 #block-01h{
   background: url("../img/block01h_bg.jpg") top center no-repeat;
   background-size: cover;
-}
-#block-01h h2{
-	top: 220px;
-	display: flex;
-	justify-content: space-evenly;
 }
 #block-01p{
   background: url("../img/block01p_bg.jpg") top center no-repeat;
   background-size: cover;
 }
-#block-01p h2{
-	top: 220px;
-	display: flex;
-	justify-content: space-evenly;
-}
 #block-01с{
   background: url("../img/block01c_bg.jpg") top center no-repeat;
   background-size: cover;
-}
-#block-01с h2{
-	top: 220px;
-	display: flex;
-	justify-content: space-evenly;
 }
 // .block-01 .inner-content p:last-of-type{
 // 	padding-bottom: 40px;
