--- a/dgm/assets/css/main.scss
+++ b/dgm/assets/css/main.scss
@@ -157,6 +157,11 @@ ul{
 	position: absolute;
 	top: 20px;
 	right: 40px;
+	width:200px;
+	@media screen and (max-width: 725px){
+		width:130px;
+	}
+
 }
 .logo img{
 	height: 130px;
@@ -172,10 +177,31 @@ ul{
 // .logo img:hover{
 // 	animation-play-state: paused;
 // }
+.header_container{
+	height: 165px;
+	background-color:$unprimary;
+	@media screen and (max-width: 725px){
+	height: 120px;
+	}
+}
+
+.sidebar_content:before{
+	background-color: #1a2930;
+	content: "";
+	display: block;
+	width: 300px;
+	position: absolute;
+	top: -165px;
+	bottom: 0;
+	@media screen and (max-width: 725px){
+		display: none;
+	}
+}
 .transparent{
 	// position: absolute;
 	right: 30px;
 	top: 10px;
+	border: 1px solid rgba(255, 255, 255, 0);
 	@media screen and (max-width: 460px){
 	right: 20px;
 top:15px}
@@ -266,6 +292,7 @@ padding: 0;
 }
 #MainMenu{
 	z-index: 10;
+	min-height:100%;
     height: 100vh;
     width: 350px;
     background-color: $primary;
@@ -287,11 +314,14 @@ padding: 0;
 			top:20%;
 			left:50%;
 			transform: translate(-50%);
+			width: 150px;
+			height: 100px;
 			@media screen and (max-height: 800px){
 				top:3%;
 			}
 			@media screen and (max-height: 410px){
 				top:2%;
+				width: auto;
 			}
 		}
 }
@@ -368,6 +398,7 @@ padding: 0;
 	}
 	@media screen and (max-height: 410px){
 		bottom: 1%;
+		height: 1.4rem;
 
 	}
 }
@@ -514,10 +545,6 @@ padding: 0;
 }
 
 .newsmedia{
-	padding: 40px 70px;
-	@media screen and (max-width: 460px){
-		padding:30px 40px;
-	}
 	.news-item{
 		color: $primary;
 		transition: all 0.3s;
@@ -561,34 +588,44 @@ padding: 0;
 
 
 .block_row{
-	display: grid;
-	grid-template-columns: 1fr 1fr;
-	@media screen and (max-width: 860px){
-		grid-template-columns: 1fr;
-	}
+	display: flex;
+	@media screen and (max-width: 680px){
+		flex-direction: column;
+		}
 	.ourmission{
-		padding:40px 70px;
+		width: 50%;
 		background-color: $unprimary;
 		color: #fff;
-		@media screen and (max-width: 460px){
-			padding:30px 40px;
+		@media screen and (max-width: 680px){
+		width: auto;
 		}
+
 		.heading_h2{
 			@media screen and (max-width: 860px){
 				font-size: 22px;
 			}
-
 		}
 	}
-
+	.newsmedia{
+		width: 50%;
+		@media screen and (max-width: 680px){
+			width: auto;
+			}
+	}
+	.mission_wrapper{
+		padding:40px 70px;
+		@media screen and (max-width: 460px){
+			padding:30px 40px;
+		}
+	}
 }
 .block-product_picture{
-	// padding: 20px;
 	text-align: center;
 	text-align: center;
 	height: 400px;
   line-height: 400px;
-  overflow: hidden;
+	overflow: hidden;
+
 	@media screen and (max-width: 460px){
 		padding:20px;
 
@@ -598,109 +635,125 @@ padding: 0;
 		max-height: 100%;
 		transition: all 0.5s ease-in;
 		vertical-align: middle;
-		@media screen and (max-width: 680px){
-			max-height:none;
-		}
 	}
 	img:hover{
 		transform: scale(1.07);
 	}
 }
 .block-product{
-	// width: 100%;
 	height: 400px;
-	display: grid;
+	display: flex;
 	padding-left: 12px;
 	border-top:1px solid $unprimary;
 	@media screen and (max-width: 680px){
+		flex-direction: column;
 		height: auto;
 	}
-	.description_wrapper:hover .block-product_description{
-		transform: rotateY(0.5turn);
+	// .description_wrapper:hover .block-product_description{
+	// 	transform: rotateY(0.5turn);
+	// }
+	.description_wrapper{
+		transform-style: preserve-3d;
 	}
+	.description_wrapper:hover .description_side{
+		transform: rotateY(0deg);
+	}
+	.description_wrapper:hover .description_title {
+		transform: rotateY(180deg);
+	}
+	.description_wrapper,
+	.description_title,
+	.description_side {
+		// width: 320px;
+		height: 400px;
+	}
+
+
 	.block-product_description{
-		// padding: 0 40px 0 40px;
 		position: relative;
 		height: 400px;
-		transition: transform 1.4s;
+		transition: 1.4s;
 		transform-style: preserve-3d;
+		// background-color: $unprimary;
+		.description_title{
+			color:#fff;
+			z-index: 2;
+			transform: rotateY(0deg);
+			background-color: $unprimary;
+			.card_title{
+				transform: translateZ(6rem);
+				margin:40px;
+			}
+			.card_subtitle{
+				transform: translateZ(4rem);
+				margin: 0 40px;
+			}
+		}
+
 		.description_title,.description_side{
 			position: absolute;
 			top: 0;
 			bottom: 0;
 			left: 0;
 			right: 0;
-			// padding: 40px 0;
-			padding: 40px 40px 0 40px;
+			// margin: 40px 40px 0 40px;
 			backface-visibility: hidden;
 			transform-style: preserve-3d;
-			display: grid;
+			transition: 1.4s;
+			display: flex;
+			flex-direction: column;
 			@media screen and (max-width: 780px){
 				padding: 20px 15px 0 15px;
 
 			}
 		}
 		.description_side{
-			transform: rotateY(0.5turn);
+			transform: rotateY(-180deg);
 			font-family: $verdana;
-			// text-align: center;
-			place-content: center;
 			text-transform: uppercase;
 			line-height: 1.5;
-				.card_body{
-					transform: translateZ(4rem);
-				}
-		}
-		.description_title{
-			color: $unprimary;
-			position: relative;
-			.card_title{
-				transform: translateZ(6rem);
-			}
-			.card_subtitle{
-				transform: translateZ(4rem);
-				margin: 0;
-			}
-		}
-	}
-}
-.block-product{
-	.block-product_description{
-		background-color: $unprimary;
-		.description_title{
-			color:#fff;
-		}
-		.description_side{
 			background-color: #fff;
-			.card_body{
+
+				.card_body{
+					margin: 40px;
+					margin:auto 40px;
+					transform: translateZ(4rem);
 				color:$unprimary;
+
 				}
 		}
+		}
 }
-}
-.undermining{
-	grid-template-columns: 60% 40%;
-	@media screen and (max-width: 680px){
-		grid-template-columns: 1fr;
-		grid-template-rows: 1fr 1fr;
-		grid-template-rows: max-content;
-	}
 
+.undermining{
+
+	.block-product_picture{
+		width:60%;
+		@media screen and (max-width: 680px){
+			width: auto;}
+	}
+	.description_wrapper{
+		width:40%;
+		@media screen and (max-width: 680px){
+			width: auto;}
+	}
 }
 .adobemining{
-	grid-template-columns: 40% 60%;
 	@media screen and (max-width: 680px){
-		grid-template-columns: 1fr;
-		grid-template-rows: 1fr 1fr;
-		grid-template-rows: max-content;
+		flex-direction: column-reverse;
+	}
+	.description_wrapper{
+		width:40%;
+		@media screen and (max-width: 680px){
+			width: auto;}
 	}
 	.block-product_picture{
+		width:60%;
 		@media screen and (max-width: 680px){
-			grid-row-start: 1;
-		}
+			width: auto;}
+
 	}
 }
-
 .add_product{
 	height: 400px;
 	border-top:1px solid $unprimary;
@@ -708,13 +761,10 @@ padding: 0;
 		height: auto;
 	}
 }
-
-
 .footer{
 	position: relative;
 	float:left;
 	width: 100%;
-	// height: 500px;
 	background-color: $unprimary;
 	color: #fff;
 	font-family: $verdana;
@@ -723,196 +773,169 @@ padding: 0;
 		font-size: 14px;
 	}
 	.footer_wrapper{
-		background-color: $unprimary;
-		// height: 500px;
-	// padding-left: 50px;
+	background-color: $unprimary;
 	padding-top: 80px;
-	display: grid;
-	grid-template-columns: 30% 70%;
-	grid-template-rows: 1fr 60px;
+	display: flex;
+	flex-direction: column;
 	@media screen and (max-width: 680px){
-		grid-template-columns: 40% 60%;
-	}
-	@media screen and (max-width: 460px){
 		display: block;
 		text-align: center;
 	}
-	}
 
-	.scrol-btn{
-		position: absolute;
-		right: 30px;
-		top: 15px;
-		transition: all .5s;
-		width: 50px;
+	.footer_wrapper_head{
+display: flex;
+
+	@media screen and (max-width: 680px){
+		display: block;
 		text-align: center;
-		cursor: pointer;
-		@media screen and (max-width: 460px){
-
-		top: 720px;
-	}
-		img{
-			width: 30px;
-			animation: scroll-up-arrow 3s infinite;
-		}
-		span{
-			font-family: $verdana;
-			text-transform: uppercase;
-			font-size: 12px;
-			color: #fff;
-
-		}
-		a:hover img{
-			transform: scale(1.2);
-			transition: all .5s;
-		}
-		@keyframes scroll-up-arrow {
-			0% {
-				transform: translateY(1rem);
-				opacity: 0
-			}
-
-			20%,
-			90% {
-				transform: translateY(0);
-				opacity: 1
-			}
-
-			100% {
-				transform: translateY(-1rem);
-				opacity: 0
-			}
-		}
-	}
+	}}
 	.contact-location_heading{
-		color: $primary;
-		text-transform: uppercase;
-		font-family: $verdana;
-		font-size: 14px;
-	}
-		.footer_head{
-			display: grid;
-			// grid-template-rows: 40% 20% 20%;
-			padding-left: 50px;
-			@media screen and (max-width: 680px){
-			padding-left: 25px;
-			}
-			@media screen and (max-width: 460px){
-				display: block;
-				padding-left: 0;
-			}
-			.mail a{
-				font-size: 14px;
-				color: #fff;
-				text-decoration: underline;
+				color: $primary;
 				text-transform: uppercase;
+				font-family: $verdana;
+				font-size: 14px;
 			}
-			.contact-location{
-				line-height: 1.5;
-				}
-			.social{
-				padding-top: 20px;
-				text-align: start;
+			.footer_head{
+							display: flex;
+							flex-direction: column;
+							border-right: 1px solid rgba(255,255,255,0.3);
+							// justify-content: center;
+							padding-left: 50px;
+							padding-right: 50px;
+							min-width: 250px;
+
+							@media screen and (max-width: 460px){
+								display: block;
+								padding-left: 0;
+							}
+							.mail a{
+								font-size: 14px;
+								color: #fff;
+								text-decoration: underline;
+								text-transform: uppercase;
+								@media screen and (max-width: 680px){
+									font-size: 18px;
+										}
+							}
+							.contact-location{
+								line-height: 1.5;
+								margin-top: 50px;
+								@media screen and (max-width: 680px){
+								margin-top: 15px;
+								line-height: 2;
+									}
+								}
+							.social{
+								padding-top: 30px;
+								text-align: start;
+								@media screen and (max-width: 680px){
+									display: flex;
+									justify-content: space-around;
+									text-align: center;
+								}
+								a{
+									padding-right: 20px;
+									line-height: 2.5;
+									img{
+										height: 20px;
+										@media screen and (max-width: 680px){
+											height: 30px;
+
+												}
+									}
+								}
+								a:hover img{
+									transform: scale(1.3);
+									transition: all .5s;
+								}
+							}
+						}
+						.footer_body{
+										margin: 0 auto;
+										display: flex;
+										flex-direction: row;
+										flex-wrap: wrap;
+										// justify-content: space-around;
+
+										@media screen and (max-width: 680px){
+											display: block;
+											padding-left: 0;
+										}
+										.footer-contact{
+											font-family: $verdana;
+											font-weight: 400;
+											font-size: 12px;
+											margin: 50px;
+											.contact-location_heading{
+												padding-bottom: 5px;
+												display: inline-block;
+												border-bottom: 1px solid rgba(255,255,255,0.3);
+											}
+										}
+									}
+	}
+
+			.scrol-btn{
+				position: absolute;
+				right: 30px;
+				top: 15px;
+				transition: all .5s;
+				width: 50px;
+				height: 40px;
+				text-align: center;
+				cursor: pointer;
 				@media screen and (max-width: 460px){
-					text-align: center;
+
+				top: 720px;
+			}
+				img{
+					width: 30px;
+					animation: scroll-up-arrow 3s infinite;
 				}
-				a{
-					padding-right: 20px;
-					line-height: 2.5;
-					img{
-						height: 20px;
-					}
+				span{
+					font-family: $verdana;
+					text-transform: uppercase;
+					font-size: 12px;
+					color: #fff;
+
 				}
 				a:hover img{
-					transform: scale(1.3);
+					transform: scale(1.2);
 					transition: all .5s;
 				}
-			}
-		}
-		.footer_body{
-			// height: 500px;
-			padding-left: 40px;
-			border-left: 1px solid rgba(255,255,255,0.3);
-			display: grid;
-			grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-			grid-template-rows: max-content;
-			grid-gap: 10vw;
-			@media screen and (max-width: 460px){
-				display: block;
-				padding-left: 0;
-			}
-			.footer-contact{
-				font-family: $verdana;
-				font-weight: 400;
-				font-size: 12px;
-				.contact-location_heading{
-					padding-bottom: 5px;
-					display: inline-block;
-					border-bottom: 1px solid rgba(255,255,255,0.3);
-					// content: '';
-					// height: 4px;
-					// width: 47px;
-					// background-color: #fff;
-					// position: absolute;
-					// left: 40%;
+				@keyframes scroll-up-arrow {
+					0% {
+						transform: translateY(1rem);
+						opacity: 0
+					}
+					20%,
+					90% {
+						transform: translateY(0);
+						opacity: 1
+					}
+					100% {
+						transform: translateY(-1rem);
+						opacity: 0
+					}
 				}
 			}
-		}
+}
 		.policyty{
-			grid-column-start:1;
-			grid-column-end:3;
-			padding-right: 40px;
-			justify-self: end;
-			align-self: center;
-			@media screen and (max-width: 460px){
-				display: block;
-				grid-column-start:none;
-				grid-column-end:none;
-				text-align: center;
+			 display: flex;
+   	 justify-content: flex-end;
+   	 margin-right: 50px;
+
+			@media screen and (max-width: 680px){
+				justify-content: center;
 				padding-right: 0;
 				padding-top: 20px;
+				margin-left: 26px;
+				// align-self: center;
 			}
 			p{
 				font-family: $elektra;
 				font-size: 12px;
-				// letter-spacing: 1px;
 				font-weight: 100;
 				color:#fff;
 			}
-			// background-color: $unprimary;
-			// float: left;
-			// padding-left: 50px;
 		}
-
-}
-.header_container{
-	height: 165px;
-	background-color:$unprimary;
-	@media screen and (max-width: 725px){
-	height: 120px;
-	}
-}
-
-.sidebar_content:before{
-	background-color: #1a2930;
-	content: "";
-	display: block;
-	width: 300px;
-	position: absolute;
-	top: -165px;
-	bottom: 0;
-	@media screen and (max-width: 725px){
-		display: none;
-	}
-}
-// .content_sidebar:after{
-// 	content:"";
-// 	background-color: $unprimary;
-// 	width: 300px;
-// 	height: 200%;
-// 	top: 165px;
-// 	left: 0;
-// 	position: absolute;
-// 	z-index: -10;
-// }
-
