--- a/dgm/assets/css/product.scss
+++ b/dgm/assets/css/product.scss
@@ -1,2 +1,336 @@
 @import 'fonts';
 @import 'values';
+.product-content{
+	position:relative;
+	width: 100%;
+		float: left;
+		font-family: $verdana;
+		font-size: 16px;
+		font-weight: 100;
+		min-height: 20rem;
+
+}
+#minor_headerForm{
+	margin-top: 60px;
+	@media screen and (max-width: 860px){
+		margin-left: 200px;
+		width: auto;
+	}
+	@media screen and (max-width: 725px){
+		margin-top: 100px;
+		margin-left: 20%;
+	}
+	.heading_h2{
+		@media screen and (max-width: 725px){
+			font-size: 26px;
+		}
+	}
+	a{
+		color:$primary;
+		text-decoration: none;
+	}
+}
+.product-content:before{
+	background-color: #1a2930;
+    content: "";
+    display: block;
+    width: 180px;
+    // height: 100%;
+    position: absolute;
+    top: -500px;
+    bottom: 0;
+    // left: -25%;
+		// z-index: 9999;
+		@media screen and (max-width: 725px){
+			display: none;
+		}
+}
+
+.product-content_wrapper{
+	margin-left: 180px;
+	@media screen and (max-width: 725px){
+		margin-left: 0;;
+	}
+}
+.view {
+  // margin: 10px;
+  // float: left;
+  // border: 10px solid #fff;
+  overflow: hidden;
+  position: relative;
+  text-align: center;
+  // box-shadow: 1px 1px 2px #e6e6e6;
+  // cursor: default;
+	// background: #fff url(/assets/img/product_web/under3.jpg) no-repeat center center;
+	// background-size: cover;
+	// background-color:$unprimary;
+}
+.view h2{
+	position: absolute;
+	font-family: $elektra;
+	font-size: 36px;
+	font-weight: 100;
+	text-transform: uppercase;
+	left: 2rem;
+	top: 70%;
+	z-index: 1;
+	color: #fff;
+	transition: all 0.5s;
+	text-align: start;
+	@media screen and (max-width: 860px){
+		margin: 0;
+	}
+	@media screen and (max-width: 725px){
+		font-size: 25px;
+	}
+}
+.view .mask,
+.view .content {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  overflow: hidden;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+}
+
+.view img {
+  display: block;
+	position: relative;
+	width:100%;
+}
+
+// .view h2 {
+//   text-transform: uppercase;
+//   color: #fff;
+//   text-align: center;
+//   position: relative;
+//   font-size: 20px;
+//   // font-family: Raleway, serif;
+//   padding: 10px;
+// /*   background: rgba(0, 0, 0, 0.8); */
+//   margin: auto 0;
+// }
+
+// .view p {
+//   // font-family: Merriweather, serif;
+//   font-style: italic;
+//   font-size: 14px;
+//   position: relative;
+//   color: #fff;
+//   padding: 0px 20px 0px;
+//   text-align: center
+// }
+
+.view .info {
+  display: inline-block;
+  text-decoration: none;
+  padding: 15px 25px;
+  background: $primary;
+  color: #fff;
+  // font-family: Raleway, serif;
+  text-transform: uppercase;
+	box-shadow: 0 0 1px #fff;
+	font-size: 20px;
+}
+
+.view .info:hover {
+	box-shadow: 0 0 10px #000;
+	color:#000;
+}
+.view-under img {
+  transform: scaleY(1);
+  transition: all .7s ease-in-out;
+}
+
+.view-under .mask {
+  background-color: $unprimary;
+  transition: all 0.5s linear;
+	opacity: 0;
+	display: flex;
+	flex-direction: column;
+    justify-content: center;
+}
+
+.view-under h3 {
+  // border-bottom: 1px solid rgba(250, 250, 250, 0.3);
+  // background: transparent;
+  // marg in: 10% 0;
+  transform: scale(0);
+  color: #fff;
+  transition: all 0.5s linear;
+	opacity: 0;
+	text-transform: uppercase;
+	font-family: $elektra;
+	font-weight: 200;
+	font-size: 30px;
+	@media screen and (max-width: 725px){
+		font-size: 25px;
+	}
+}
+
+// .view-under p {
+//   color: #333;
+//   opacity: 0;
+//   transform: scale(0);
+//   transition: all 0.5s linear;
+//   padding-top:5px;
+// }
+
+.view-under .info {
+
+  opacity: 0;
+  transform: scale(0);
+  transition: all 0.5s linear;
+}
+
+.view-under:hover img{
+  transform: scale(10);
+	opacity: 0;
+
+}
+.view-under:hover h2{
+	transform: translate3d(220px,-220px,0);
+  opacity: 0;
+
+}
+.view-under:hover .mask {
+  opacity: 1;
+}
+
+.view-under:hover h3,
+.view-under:hover p,
+.view-under:hover .info {
+  transform: scale(1);
+  opacity: 1;
+}
+///////////////////////////////////////////////////////////////////////////
+.product-content_wrapper{
+	ul,li{
+		list-style-type: none;
+	}
+
+	ul.categorias-content {
+		margin: 0px auto;
+		padding: 40px;
+		width: 80%;
+	}
+	ul.categorias-content li.categoria ul.subcategorias-content {
+		display: none;
+		padding: 0 0 0 15px;
+	}
+
+	ul.categorias-content li.categoria:last-child{
+		border-bottom: 1px solid #AEAEAC;
+	}
+
+	ul.categorias-content li.categoria{
+		position: relative;
+		padding: 0;
+		font-size: 25px;
+		border-top: 1px solid #AEAEAC;
+	}
+
+	ul.categorias-content li.categoria a{
+		text-decoration: none;
+		display: block;
+		color: #000;
+		padding: 15px 40px;
+	}
+
+	ul.categorias-content li.categoria a:before {
+		font-size: 35px;
+		position: absolute;
+		z-index: 1;
+		right: 10px;
+		top: 8px;
+		text-align: center;
+	}
+
+	ul.categorias-content li.categoria.active > a {
+		color: white;
+		background: $primary;
+		display: block;
+	}
+
+	ul.categorias-content li.categoria.active a.active:before {
+		font-size: 35px;
+		position: absolute;
+		z-index: 1;
+		right: 10px;
+		top: 8px;
+		text-align: center;
+	}
+
+	ul.categorias-content li.categoria a.seta-direita:before{
+		content: "";
+		display: inline-block;
+    margin-top: 12px;
+    margin-right: 10px;
+    width: 0;
+    height: 0;
+    border-top: 10px solid transparent;
+    border-bottom: 10px solid transparent;
+    border-left: 8px solid $primary;
+	}
+
+}
+
+.product-item-wrapper{
+	display: flex;
+@media screen and (max-width: 1240px){
+		flex-direction: column;
+	}
+
+	.product-item_picture{
+		margin: 50px auto;
+		@media screen and (max-width: 1240px){
+			width: 100%;
+		}
+		img{
+			@media screen and (max-width: 1240px){
+				width: 100%;
+			}
+		}
+
+	}
+	.product-item-description{
+		margin: 50px 30px;
+		font-family: $verdana;
+		font-size: 1.21em;
+		line-height: 1.6em;
+		.product-item_tittle{
+
+			p{
+				margin: 0 0 50px;
+				font-family: $proximathin;
+				font-weight: 600;
+				font-size: 1.9em;
+				line-height: 2em;
+				color:$unprimary;
+				border-bottom: 2px solid $primary;
+			}
+		}
+	}
+}
+.product-tittle_table{
+	.product-tittle_table-title{
+		border: 1px solid $unprimary;
+		color:#fff;
+		background-color: $unprimary;
+		text-align: center;
+		text-transform: uppercase;
+		font-size: 2em;
+		line-height: 2em;
+		margin: 0 auto;
+		padding: 0 12px;
+		font-family: $proximathin;
+	}
+	.product-tittle_table-content{
+margin: 50px 50px 100px;
+font-size: 1.21em;
+line-height: 1.6em;
+	}
+}
