--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@
 Primary style
 
 -------------------------------- */
-@import url("https://fonts.googleapis.com/css?family=Roboto:100,300,700");
+@import url("https://fonts.googleapis.com/css?family=Roboto:100,300,400,600,700");
 @import url("https://fonts.googleapis.com/css?family=Montserrat:100,200,300,600,700");
 *, *::after, *::before {
   -webkit-box-sizing: border-box;
@@ -1099,12 +1099,31 @@ dd {
   font-size: 1.65vw;
   line-height: 10vh;
   vertical-align: middle;
-  border-bottom: 1px dashed #ddd;
   background: transparent url(../img/skill-bg.png) no-repeat center center;
   -webkit-background-size: 3vw 3vw;
           background-size: 3vw;
   position: relative;
   font-weight: 300; }
+
+#know-how dd:nth-of-type(2) {
+  background: transparent url(../img/logo5.svg) no-repeat center center;
+  -webkit-background-size: 3vw 3vw;
+          background-size: 3vw; }
+
+#know-how dd:nth-of-type(3) {
+  background: transparent url(../img/logo5.svg) no-repeat center center;
+  -webkit-background-size: 3vw 3vw;
+          background-size: 3vw; }
+
+#know-how dd:nth-of-type(4) {
+  background: transparent url(../img/logo5.svg) no-repeat center center;
+  -webkit-background-size: 3vw 3vw;
+          background-size: 3vw; }
+
+#know-how dd:nth-of-type(5) {
+  background: transparent url(../img/logo5.svg) no-repeat center center;
+  -webkit-background-size: 3vw 3vw;
+          background-size: 3vw; }
 
 #contacts dt {
   padding-left: 10vw;
@@ -1120,7 +1139,18 @@ dd {
   background-image: none; }
 
 #know-how dd {
-  color: #fff; }
+  color: #fff;
+  -webkit-transition-duration: 1s;
+       -o-transition-duration: 1s;
+          transition-duration: 1s; }
+
+#know-how dd:hover {
+  -webkit-transform: translateX(-100px) scale(0) rotateZ(360deg);
+      -ms-transform: translateX(-100px) scale(0) rotate(360deg);
+          transform: translateX(-100px) scale(0) rotateZ(360deg);
+  -webkit-transition: all 1s easy-in-out;
+  -o-transition: all 1s easy-in-out;
+  transition: all 1s easy-in-out; }
 
 #know-how dd:first-of-type {
   color: #000; }
@@ -1181,8 +1211,10 @@ dd a {
 
 #contacts dd a:hover img {
   width: 3.7vw;
-  /*background-color: #fff;
-  background: transparent url(../img/contacts-bg.png) no-repeat center center;*/ }
+  -webkit-transition-duration: 0.5s;
+       -o-transition-duration: 0.5s;
+          transition-duration: 0.5s;
+  /*background: transparent url(../img/contacts-bg.png) no-repeat center center;*/ }
 
 .nano-content img {
   width: -webkit-calc(50vw - 20px);
@@ -1282,72 +1314,20 @@ dd a {
   position: relative;
   text-transform: uppercase; }
 
-#projects h4:after {
-  background: transparent url(../img/shape-015.png) no-repeat right 90%;
-  content: '';
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  left: 0;
-  top: 0; }
+#projects a {
+  -webkit-transition-duration: 0.5s;
+       -o-transition-duration: 0.5s;
+          transition-duration: 0.5s; }
 
-#projects h4:nth-of-type(1):after {
-  background-position: right 0;
-  -webkit-background-size: 300px 260px;
-          background-size: 300px 260px;
-  /*margin-top: 4vh;*/ }
-
-#projects h4:nth-of-type(2):after {
-  background-position: right 11%;
-  -webkit-background-size: 300px 260px;
-          background-size: 300px 260px; }
-
-#projects h4:nth-of-type(3):after {
-  background-position: right 22%;
-  -webkit-background-size: 300px 260px;
-          background-size: 300px 260px; }
-
-#projects h4:nth-of-type(4):after {
-  background-position: right 33%;
-  -webkit-background-size: 300px 260px;
-          background-size: 300px 260px; }
-
-#projects h4:nth-of-type(5):after {
-  background-position: right 44%;
-  -webkit-background-size: 300px 260px;
-          background-size: 300px 260px; }
-
-#projects h4:nth-of-type(6):after {
-  background-position: right 55%;
-  -webkit-background-size: 300px 260px;
-          background-size: 300px 260px; }
-
-#projects h4:nth-of-type(7):after {
-  background-position: right 66%;
-  -webkit-background-size: 300px 260px;
-          background-size: 300px 260px; }
-
-#projects h4:nth-of-type(8):after {
-  background-position: right 77%;
-  -webkit-background-size: 300px 260px;
-          background-size: 300px 260px; }
-
-#projects h4:nth-of-type(9):after {
-  background-position: right 88%;
-  -webkit-background-size: 300px 260px;
-          background-size: 300px 260px; }
-
-#projects h4:nth-of-type(10):after {
-  background-position: right 99%;
-  -webkit-background-size: 300px 260px;
-          background-size: 300px 260px; }
+#projects a:hover {
+  color: #000; }
 
 #projects .nano-content strong {
   color: #63172e;
-  font-weight: 400; }
+  font-weight: 600; }
 
 #projects .nano-content em {
-  font-weight: 400; }
+  font-weight: 600; }
 
 .project-detail .nano-content h4 {
   font-size: 1.75vw;
