--- a/css/main.css
+++ b/css/main.css
@@ -1837,4 +1837,137 @@ dd a {
   #project-4 .aside {
     background: #5d3482 url(../img/aside-8.png) no-repeat center center; } }
 
+.preloader-inner {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 120%;
+  height: 120vh;
+  z-index: 10000;
+  background: #fff;
+  position: absolute;
+  -webkit-transition: all 0.2s ease-out;
+  -o-transition: all 0.2s ease-out;
+  transition: all 0.2s ease-out; }
+  .preloader-inner.done {
+    opacity: 0;
+    visibility: hidden; }
+
+.preloader-inner .wrap {
+  width: 100%;
+  height: 100%;
+  position: relative; }
+
+.preloader {
+  position: fixed;
+  left: 25%;
+  top: 25%;
+  width: 50%;
+  z-index: 10000; }
+
+.preloader p {
+  font-family: Arial;
+  text-align: center;
+  font-size: 10px;
+  color: #000;
+  text-transform: uppercase;
+  font-weight: 400;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 30px;
+  width: 100%;
+  margin-bottom: 50px; }
+
+.svg_img {
+  width: 30%;
+  margin: 0 auto; }
+
+#load {
+  width: 600px;
+  height: 36px;
+  overflow: visible;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  cursor: default;
+  color: #000;
+  margin-top: 50px; }
+  #load div {
+    position: absolute;
+    width: 20px;
+    height: 36px;
+    opacity: 0;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    -webkit-animation: move 2s linear infinite;
+            animation: move 2s linear infinite;
+    -webkit-transform: rotate(180deg);
+        -ms-transform: rotate(180deg);
+            transform: rotate(180deg);
+    color: #000; }
+
+#load div:nth-child(2) {
+  -webkit-animation-delay: 0.2s;
+          animation-delay: 0.2s; }
+
+#load div:nth-child(3) {
+  -webkit-animation-delay: 0.4s;
+          animation-delay: 0.4s; }
+
+#load div:nth-child(4) {
+  -webkit-animation-delay: 0.6s;
+          animation-delay: 0.6s; }
+
+#load div:nth-child(5) {
+  -webkit-animation-delay: 0.8s;
+          animation-delay: 0.8s; }
+
+#load div:nth-child(6) {
+  -webkit-animation-delay: 1s;
+          animation-delay: 1s; }
+
+#load div:nth-child(7) {
+  -webkit-animation-delay: 1.2s;
+          animation-delay: 1.2s; }
+
+@-webkit-keyframes move {
+  0% {
+    left: 0;
+    opacity: 0; }
+  35% {
+    left: 41%;
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+    opacity: 1; }
+  65% {
+    left: 59%;
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+    opacity: 1; }
+  100% {
+    left: 100%;
+    -webkit-transform: rotate(-180deg);
+            transform: rotate(-180deg);
+    opacity: 0; } }
+
+@keyframes move {
+  0% {
+    left: 0;
+    opacity: 0; }
+  35% {
+    left: 41%;
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+    opacity: 1; }
+  65% {
+    left: 59%;
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+    opacity: 1; }
+  100% {
+    left: 100%;
+    -webkit-transform: rotate(-180deg);
+            transform: rotate(-180deg);
+    opacity: 0; } }
+
 /*# sourceMappingURL=main.css.map */
